# creative-plate

./: .gitignore  AGENTS.md  README.md
aesthetics_score/: README.md  app.py  main.py  pyproject.toml  requirements.txt
comfy-ui/: lesson.json  lesson_flux.json  readme.md
crawl-video/: CLAUDE.md  README.md  README_EN.md
crawl-video/missav-dl/: AGENTS.md  CLAUDE.md  app.py  downloader.py  pyproject.toml  queue_manager.py  requirements.txt  run.sh  state.py
crawl-video/missav-dl/.streamlit/: config.toml
crawl-video/missav-dl/tests/: conftest.py  test_downloader.py  test_queue_manager.py  test_state.py
daegu-election-recorder/: .gitignore  CODEX_HANDOFF.md  pyproject.toml
daegu-election-recorder/.streamlit/: config.toml
daegu-election-recorder/dashboard/: README.md  streamlit_app.py
daegu-election-recorder/src/election_recorder/: charts.py  dashboard.py  main.py  parser.py  recorder.py
daegu-election-recorder/tests/: test_charts.py  test_dashboard.py  test_parser.py  test_recorder.py  test_streamlit_app.py  test_streamlit_theme.py
fluffy-qr/: .gitignore
grok-clip-chain/: .gitignore  AGENTS.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
pixel-palette/: .gitignore  README.md  README_EN.md  README_ZH.md  tailwind.config.ts  tsconfig.tsbuildinfo
pixel-palette /: .env.example  next.config.ts  package-lock.json  package.json
pixel-parfait /: .env.example  (+7 more)
youtube-to-srt/: .env.local.example  .gitignore  README.md  README_EN.md  pyproject.toml  run.sh  urls.example.txt
youtube-to-srt/src/youtube_to_srt/: __init__.py  cli.py  core.py  extractor.py  pipeline.py  srt_formatter.py  transcriber.py  ui.py  ui_handlers.py
youtube-to-srt/tests/: test_cli.py  test_core.py  test_extractor.py  test_integration.py  test_pipeline.py  test_srt_formatter.py  test_transcriber.py  test_ui_handlers.py
(+201 files in other folders)
