[project]
name = "daegu-election-recorder"
version = "0.1.0"
description = "Record Daegu governor vote counting numbers from an already-opened Playwright page."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "streamlit>=1.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
