[project]
name = "missav-dl"
version = "0.1.0"
description = "xxxx.xx HLS 영상을 다중 URL 로 일괄 다운로드하는 Streamlit 앱"
requires-python = ">=3.11,<3.13"
dependencies = [
    "playwright>=1.44",
    "httpx>=0.27",
    "streamlit>=1.35",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: 실제 네트워크에 접속하는 통합 테스트 (기본 비활성)",
]
addopts = "-m 'not integration'"
